[package]
name = "qpage"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
zip = "2.2.0"
flate2 = "1.0.33"
tar = "0.4.42"
scraper = "0.20.0"
dirs = "5.0.1"
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.19"
once_cell = "1.19.0"
